--- a/src/Styles/Students-css/StudentsList.css
+++ b/src/Styles/Students-css/StudentsList.css
@@ -1,13 +1,12 @@
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(247px, 1fr)); /* match profile-card width */
-  justify-content: start; /* align grid items to the left */
-  gap: 39px;
+  grid-template-columns: repeat(auto-fill, minmax(247px, 1fr)); 
+  justify-content: start;
   padding-right: 30px;
   padding-left: 0;
 }
 
-.container {
+.container1 {
   max-width: 100%;
   margin: 0 auto;
 }
@@ -15,9 +14,6 @@
 * {
   box-sizing: border-box;
 }
-
-
-
 
 .table-container {
   padding: 20px;
@@ -75,8 +71,9 @@ th, td {
 
 .profile-card {
   position: relative;
-  width: 250px;
+  width: 230px;
   height: 234px;
+  margin: 10px;
   padding: 20px;
   background-color: #ffffff;
   border: 1px solid #1F6978;
@@ -101,11 +98,6 @@ th, td {
   border: 1px solid #f0f0f0;
   margin-bottom: 12px; /* space below image */
 }
-
-
-
-
-
 
 /* Mobile responsiveness for iOS and Android (small screens) */
 @media (max-width: 480px) {
