--- a/src/Styles/Course-css.css/CourseList.css
+++ b/src/Styles/Course-css.css/CourseList.css
@@ -65,8 +65,8 @@
   pointer-events: none;
 }
 
-.add-btn {
-  width: 210px;
+.add-btn1 {
+  width: 150px;
   height: 46px;
   border-radius: 5px;
   background-color: #1F6978;
@@ -76,7 +76,7 @@
   font-size: 16px;
   font-family: 'Montserrat';
   font-weight: 700;
-  padding: 13px 40px;
+  padding: 13px 15px;
   display: flex;
   align-items: center;
   margin-right: -38px;
