--- a/src/Styles/Students-css/SummaryPopup.css
+++ b/src/Styles/Students-css/SummaryPopup.css
@@ -169,6 +169,7 @@ min-width: 100%; /* ensures table spans full scrollable area */
   cursor: pointer;
   font-size: 14px;
   transition: 0.3s;
+  width: 100%;
 }
 
 .prev-btn {
@@ -187,6 +188,16 @@ min-width: 100%; /* ensures table spans full scrollable area */
 
 .save-btn:hover {
   background-color: #14515e;
+}
+
+.edit-btn{
+  padding: 10px 18px;
+  border-radius: 6px;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: 14px;
+  width: 100%;
 }
 
 
